# VisionSW

./: CMakeLists.txt  README.md  config-sample.txt  config.json  config.txt  setup_opencv.sh
custom_dll/: CMakeLists.txt  CustomDll.cpp  CustomDll.hpp
image_processor/: CMakeLists.txt  ImageObject.cpp  ImageObject.hpp  ImageProcessor.cpp  ImageProcessor.hpp
opencv_dll/: CMakeLists.txt  OpencvDll.cpp  OpencvDll.hpp  opencv_dll.cpp  opencv_dll.hpp
processor/: CMakeLists.txt  GetConfigProcessor.cpp  GetConfigProcessor.hpp  ImageObject.cpp  ImageObject.hpp  ImageProcessor.cpp  ImageProcessor.hpp  Logger.cpp  Logger.hpp  Processor.cpp  Processor.hpp
src/: main.cpp
testCode/: CMakeLists.txt  main.cpp
test_code/: CMakeLists.txt  main.cpp
